# gfmodules-prs-beheer-api

./: .dockerignore  .gitignore  LICENSE.md  Makefile  README.md  app.conf.example  docker-compose.yml  publiccode.yml  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yaml  documentation-linter.yml  release-package-venv.yaml
app/: application.py  config.py  container.py  scope_utils.py  telemetry.py
app/db/: db.py  decorator.py  session.py
app/db/models/: base.py  client.py  client_scope.py  organization.py  organization_scope.py  scope.py
app/db/repository/: base.py  client.py  client_scope.py  organization.py  scope.py  (+1 more)
app/logging/: config_builder.py  context.py  events.py  formatter.py  middleware.py
app/middleware/: stats.py
app/models/: base.py  client.py  oin.py  organization.py
app/routers/: client.py  default.py  health.py  organization.py  resolve.py
app/services/: client.py  exceptions.py  organization.py
docker/: Dockerfile  init.sh
sql/: 000-initial.sql  001-organizations.sql  002-clients.sql  003-align-model-columns.sql  003-refactor-organizations-clients.sql  003-scopes.sql  004-drop-mandate-id.sql  004-refactor-organizations-clients.sql
tests/: conftest.py  test_scopes.py
tests/db/: conftest.py  test_client.py  test_client_scope_repository.py  test_organization.py  test_organization_scope_repository.py  test_scope_repository.py  test_session.py
tests/logging/: test_config_builder.py  test_stream_routing.py
tests/models/: test_client.py  test_oin.py  test_organization.py
tests/routers/: test_audit_events.py  test_client_router.py  test_organization_router.py  test_resolve.py
tests/services/: test_client_service.py  test_organization_service.py
tools/: functional_management.sh  migrate_db.sh  seed.sh
(+1 files in other folders)
