[tool.poetry]
name = "gfmodules-prs-beheer-api"
version = "0.1.0"
description = ""
license = "EUPL-1.2"
authors = ["Ministerie van Volksgezondheid, Welzijn en Sport"]
repository = "https://github.com/minvws/gfmodules-prs-beheer-api"
readme = "README.md"
packages = [{ include = "app" }]
include = [{ path = "version.json" }]
exclude = ["app/debug"]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "0.49.0"
fastapi = ">=0.136.3,<0.139.0"
pydantic-settings = "^2.13.0"
inject = "^5.3.0"
sqlalchemy = "^2.0.49"
psycopg = { extras = ["binary", "pool"], version = "^3.3.2" }
opentelemetry-sdk = "^1.39.1"
opentelemetry-exporter-otlp-proto-grpc = "^1.39.1"
opentelemetry-instrumentation = "^0.60b1"
opentelemetry-instrumentation-fastapi = "^0.60b1"
opentelemetry-instrumentation-requests = "^0.60b1"
requests = "^2.33.1"
statsd = "^4.0.1"
cryptography = ">=42.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.0"
ruff = "0.15.20"
codespell = "^2.4.1"
pip-audit = "^2.10.0"
mypy = "^2.1.0"
types-requests = "^2.33.0.20260518"
httpx = "^0.28.1"

[tool.poetry.group.debug.dependencies]
debugpy = "^1.8.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
cache-dir = "~/.cache/ruff"
include = ["pyproject.toml", "app/*.py", "tests/*.py"]
line-length = 120

[tool.mypy]
files = "app,tests"
python_version = "3.11"
strict = true
cache_dir = "~/.cache/mypy"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"

# Since this are our tests, we don't need "-> None" annotations everywhere
disallow_untyped_defs = false

[tool.pytest.ini_options]
cache_dir = "~/.cache/pytest"
testpaths = ["tests"]
